@@ -3,6 +3,9 @@ Changelog
 
 9.6.dev0 - (unreleased)
 -----------------------
+* Bugfix: removed initialization of Figure.Load which is directly loaded when needed
+  by eeafigure_view and eeafigurefile_view
+  [ichimdav refs #28953]
 * Bugfix: Fixed error on the @@convertFigures view.
   [chiridra refs #28806]
 * Bug fix: Pillow 2.9.0 implemented eps patch but has a resolution issue. Re-added a patch'
